Reduce usage of third-party libraries